Update tbvcfreport to 0.1.8 (#3776)
* Update tbvcfreport to 0.1.8

* Update reports with tbvcfreport 0.1.8

* Add test data for reports with lineage

--- a/tools/tbvcfreport/test-data/rif_resistant_variants_report_with_lineage.html
+++ b/tools/tbvcfreport/test-data/rif_resistant_variants_report_with_lineage.html
@@ -22,112 +22,46 @@
             </h2>
         </div>
                         <hr>
-        <div class="row">
-    <h3 class="mb-2">
-        <a class="text-body" href="https://github.com/jodyphelan/TBProfiler" target="_blank"
-            rel="noreferrer noopener">TBProfiler</a>
-        Drug Resistance Report
-    </h3>
-</div>
-<div class="row">
-    <table id="drug_resistance" class="table table-hover table-bordered table-striped table-sm" cellspacing="0">
-        <caption class="mb-3 text-info">
-            <strong>Disclaimer</strong>:
-            Drug resistance predictions are for <strong>Research Purposes Only</strong> and are produced by
-            <a class="text-info" href="https://github.com/jodyphelan/TBProfiler" target="_blank"
-                rel="noreferrer noopener">TBProfiler</a>.
-        </caption>
+        <div class="row justify-content-center align-items-center">
+    <table id="lineagereport" class="table table-bordered table-striped table-hover table-sm" cellspacing="0">
         <thead class="thead-light">
             <tr>
-                <th scope="col">Drug</th>
-                <th scope="col">Resistance</th>
-                <th scope="col">Supporting Mutations</th>
+                <th scope="col">Lineage</th>
+                <th scope="col">Family</th>
+                <th scape="col">Spoligotype</th>
+                <th scope="col">RD</th>
+                <th scope="col">Agreement</th>
             </tr>
         </thead>
-                <tr>
-            <td>Isoniazid</td>
-            <td>S</td>
-            <td></td>
-        </tr>
-                <tr>
-            <td>Rifampicin</td>
-            <td>R</td>
-            <td>                <a target="_blank" href="https://explorer.sanbi.ac.za/gene?q=rpoB"
-                    rel="noreferrer noopener">rpoB</a>
-                (1.0 p.Asp435Val)
-                </td>
-        </tr>
-                <tr>
-            <td>Ethambutol</td>
-            <td>S</td>
-            <td></td>
-        </tr>
-                <tr>
-            <td>Pyrazinamide</td>
-            <td>S</td>
-            <td></td>
-        </tr>
-                <tr>
-            <td>Streptomycin</td>
-            <td>S</td>
-            <td></td>
-        </tr>
-                <tr>
-            <td>Ethionamide</td>
-            <td>S</td>
-            <td></td>
-        </tr>
-                <tr>
-            <td>Fluoroquinolones</td>
-            <td>S</td>
-            <td></td>
-        </tr>
-                <tr>
-            <td>Amikacin</td>
-            <td>S</td>
-            <td></td>
-        </tr>
-                <tr>
-            <td>Capreomycin</td>
-            <td>S</td>
-            <td></td>
-        </tr>
-                <tr>
-            <td>Kanamycin</td>
-            <td>S</td>
-            <td></td>
-        </tr>
-                <tr>
-            <td>Para-aminosalicylic acid</td>
-            <td>S</td>
-            <td></td>
-        </tr>
-                <tr>
-            <td>Linezolid</td>
-            <td>S</td>
-            <td></td>
-        </tr>
-                <tr>
-            <td>Cycloserine</td>
-            <td>S</td>
-            <td></td>
-        </tr>
-                <tr>
-            <td>Delaminid</td>
-            <td>S</td>
-            <td></td>
-        </tr>
-                <tr>
-            <td>Clofazimine</td>
-            <td>S</td>
-            <td></td>
-        </tr>
-                <tr>
-            <td>Bedaquiline</td>
-            <td>S</td>
-            <td></td>
-        </tr>
-            </table>
+        <tbody>
+                        <tr>
+                <td>lineage2</td>
+                <td>East-Asian</td>
+                <td>Beijing</td>
+                <td>RD105</td>
+                <td>1.0</td>
+            </tr>
+                        <tr>
+                <td>lineage2.2</td>
+                <td>East-Asian (Beijing)</td>
+                <td>Beijing-RD207</td>
+                <td>RD105;RD207</td>
+                <td>1.0</td>
+            </tr>
+                        <tr>
+                <td>lineage2.2.2</td>
+                <td>East-Asian (Beijing)</td>
+                <td>Beijing-RD105/RD207</td>
+                <td>RD105;RD207</td>
+                <td>1.0</td>
+            </tr>
+                    </tbody>
+    </table>
+</div>
+<div>
+    <p>No variant data was found for this VCF file. Is it a <a href="http://snpeff.sourceforge.net/SnpEff_manual.html"
+            target="_blank" rel="noreferrer noopener">SnpEff</a> annotated VCF file?</p>
+    <p>Kindly check if the '<strong>ANN</strong>' field is present.</p>
 </div>
                 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
