--- a/tools/meme/test-data/fimo_output_test1.html
+++ b/tools/meme/test-data/fimo_output_test1.html
@@ -7,6 +7,7 @@
 <style type="text/css">
 td.left {text-align: left;}
 td.right {text-align: right; padding-right: 1cm;}
+</style>
 </head>
 <body color="#000000">
 <a name="top_buttons"></a>
@@ -20,32 +21,97 @@ td.right {text-align: right; padding-right: 1cm;}
 <td bgcolor="#FFDDFF"><a href="fimo.gff""><b>Results in GFF3 Format</b></a></td>
 </tr>
 </table>
+<br/>
+<br/>
+<hr/>
 <center><big><b>FIMO - Motif search tool</b></big></center>
+<hr>
+<p>
 FIMO version 5.0.5, (Release date: Mon Mar 18 20:12:19 2019 -0700)
+</p>
+<p>
 For further information on how to interpret these results please access <a href="http://meme-suite.org/doc/fimo-output-format.html">http://meme-suite.org/doc/fimo-output-format.html</a>.<br>
 To get a copy of the FIMO software please access <a href="http://meme-suite.org">http://meme-suite.org</a>
+
+</p>
 <p>If you use FIMO in your research, please cite the following paper:<br>
 Charles E. Grant, Timothy L. Bailey, and William Stafford Noble,
 "FIMO: Scanning for occurrences of a given motif",
 <i>Bioinformatics</i>, <b>27</b>(7):1017-1018, 2011.
+<a href="http://bioinformatics.oxfordjournals.org/content/27/7/1017">[full text]</a></p>
+<hr>
 <center><big><b><a name="database_and_motifs">DATABASE AND MOTIFS</a></b></big></center>
+<hr>
+<div style="padding-left: 0.75in; line-height: 1em; font-family: monospace;">
+<p>
+  DATABASE /tmp/tmp49fkeyko/files/e/a/0/dataset_ea07d34a-d880-4cef-9b3e-995563b73c43.dat
+  <br />
   Database contains 1 sequences, 16569 residues
+</p>
+<p>
+  MOTIFS /tmp/tmp49fkeyko/files/8/b/7/dataset_8b70cd4b-aab7-40e2-8536-6ff6083c9333.dat (DNA)
+  <table>
+    <thead>
+      <tr>
+        <th style="border-bottom: 1px dashed;">MOTIF</th>
+        <th style="border-bottom: 1px dashed; padding-left: 1em;">WIDTH</th>
+        <th style="border-bottom: 1px dashed; padding-left: 1em;text-align:left;" >
          BEST POSSIBLE MATCH
+        </th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td style="text-align:right;">TACTAAYM</td>
+        <td style="text-align:right;padding-left: 1em;">8</td>
+        <td style="text-align:left;padding-left: 1em;">TACTAACA</td>
+       </tr>
+    </tbody>
+  </table>
+</p>
+<p>
 Random model letter frequencies (--nrdb--):
+<br/>
+
 A 0.275 C 0.225 G 0.225 T 0.275 </p>
+</div>
+<hr>
 <center><big><b><a name="sec_i">SECTION I: HIGH-SCORING MOTIF OCCURENCES</a></b></big></center>
+<hr>
+<ul>
+<li>
 There were 11 motif occurences with a p-value less than 0.0001.
+
 The full set of motif occurences can be seen in the
 TSV (tab-delimited values) output file
+<a href="fimo.tsv">fimo.tsv</a>, 
+the GFF3 file 
+<a href="fimo.gff">fimo.gff</a> 
+which may be suitable for uploading to the 
+<a href="http://genome.ucsc.edu/cgi-bin/hgTables">UCSC Genome Table Browser</a>
+(assuming the FASTA input sequences included genomic coordinates in UCSC or Galaxy format),
+or the XML file 
+<a href="fimo.xml">fimo.xml</a>.
+</li>
+<li>
 The <i>p</i>-value of a motif occurrence is defined as the
 probability of a random sequence of the same length as the motif
 matching that position of the sequence with as good or better a score.
+</li>
+<li>
 The score for the match of a position in a sequence to a motif
 is computed by summing the appropriate entries from each column of
 the position-dependent scoring matrix that represents the motif.
+</li>
+<li>
 The q-value of a motif occurrence is defined as the
 false discovery rate if the occurrence is accepted as significant.
+</li>
 <li>The table is sorted by increasing <i>p</i>-value.</li>
+</ul>
+<table border="1">
+<thead>
+<tr>
 <th>Motif ID</th>
 <th>Alt ID</th>
 <th>Sequence Name</th>
@@ -55,6 +121,10 @@ false discovery rate if the occurrence is accepted as significant.
 <th>p-value</th>
 <th>q-value</th>
 <th>Matched Sequence</th>
+</tr>
+</thead>
+<tbody>
+    <tr>
       <td style="text-align:left;">TACTAAYM</td>
       <td style="text-align:left;">MEME-1</td>
       <td style="text-align:left;">chrM</td>
@@ -64,10 +134,170 @@ false discovery rate if the occurrence is accepted as significant.
       <td style="text-align:left;">2.18e-05</td>
       <td style="text-align:left;">0.142</td>
       <td style="text-align:left;font-size:x-large;font-family:monospace;">TACTAACA</td>
+   </tr>
+    <tr>
+      <td style="text-align:left;">TACTAAYM</td>
+      <td style="text-align:left;">MEME-1</td>
+      <td style="text-align:left;">chrM</td>
+      <td style="text-align:center;">+</td>
+      <td style="text-align:left;">7741</td>
+      <td style="text-align:left;">7748</td>
+      <td style="text-align:left;">2.18e-05</td>
+      <td style="text-align:left;">0.142</td>
+      <td style="text-align:left;font-size:x-large;font-family:monospace;">TACTAACA</td>
+   </tr>
+    <tr>
+      <td style="text-align:left;">TACTAAYM</td>
+      <td style="text-align:left;">MEME-1</td>
+      <td style="text-align:left;">chrM</td>
+      <td style="text-align:center;">+</td>
+      <td style="text-align:left;">13656</td>
+      <td style="text-align:left;">13663</td>
+      <td style="text-align:left;">2.18e-05</td>
+      <td style="text-align:left;">0.142</td>
+      <td style="text-align:left;font-size:x-large;font-family:monospace;">TACTAACA</td>
+   </tr>
+    <tr>
+      <td style="text-align:left;">TACTAAYM</td>
+      <td style="text-align:left;">MEME-1</td>
+      <td style="text-align:left;">chrM</td>
+      <td style="text-align:center;">+</td>
+      <td style="text-align:left;">13740</td>
+      <td style="text-align:left;">13747</td>
+      <td style="text-align:left;">2.18e-05</td>
+      <td style="text-align:left;">0.142</td>
+      <td style="text-align:left;font-size:x-large;font-family:monospace;">TACTAACA</td>
+   </tr>
+    <tr>
+      <td style="text-align:left;">TACTAAYM</td>
+      <td style="text-align:left;">MEME-1</td>
+      <td style="text-align:left;">chrM</td>
+      <td style="text-align:center;">-</td>
+      <td style="text-align:left;">2299</td>
+      <td style="text-align:left;">2306</td>
+      <td style="text-align:left;">2.18e-05</td>
+      <td style="text-align:left;">0.142</td>
+      <td style="text-align:left;font-size:x-large;font-family:monospace;">TACTAACA</td>
+   </tr>
+    <tr>
+      <td style="text-align:left;">TACTAAYM</td>
+      <td style="text-align:left;">MEME-1</td>
+      <td style="text-align:left;">chrM</td>
+      <td style="text-align:center;">+</td>
+      <td style="text-align:left;">861</td>
+      <td style="text-align:left;">868</td>
+      <td style="text-align:left;">3.96e-05</td>
+      <td style="text-align:left;">0.185</td>
+      <td style="text-align:left;font-size:x-large;font-family:monospace;">TACTAACC</td>
+   </tr>
+    <tr>
+      <td style="text-align:left;">TACTAAYM</td>
+      <td style="text-align:left;">MEME-1</td>
+      <td style="text-align:left;">chrM</td>
+      <td style="text-align:center;">+</td>
+      <td style="text-align:left;">9346</td>
+      <td style="text-align:left;">9353</td>
+      <td style="text-align:left;">3.96e-05</td>
+      <td style="text-align:left;">0.185</td>
+      <td style="text-align:left;font-size:x-large;font-family:monospace;">TACTAACC</td>
+   </tr>
+    <tr>
+      <td style="text-align:left;">TACTAAYM</td>
+      <td style="text-align:left;">MEME-1</td>
+      <td style="text-align:left;">chrM</td>
+      <td style="text-align:center;">+</td>
+      <td style="text-align:left;">3767</td>
+      <td style="text-align:left;">3774</td>
+      <td style="text-align:left;">6.62e-05</td>
+      <td style="text-align:left;">0.216</td>
+      <td style="text-align:left;font-size:x-large;font-family:monospace;">TACTAATA</td>
+   </tr>
+    <tr>
+      <td style="text-align:left;">TACTAAYM</td>
+      <td style="text-align:left;">MEME-1</td>
+      <td style="text-align:left;">chrM</td>
+      <td style="text-align:center;">+</td>
+      <td style="text-align:left;">5497</td>
+      <td style="text-align:left;">5504</td>
+      <td style="text-align:left;">6.62e-05</td>
+      <td style="text-align:left;">0.216</td>
+      <td style="text-align:left;font-size:x-large;font-family:monospace;">TACTAATA</td>
+   </tr>
+    <tr>
+      <td style="text-align:left;">TACTAAYM</td>
+      <td style="text-align:left;">MEME-1</td>
+      <td style="text-align:left;">chrM</td>
+      <td style="text-align:center;">+</td>
+      <td style="text-align:left;">10105</td>
+      <td style="text-align:left;">10112</td>
+      <td style="text-align:left;">6.62e-05</td>
+      <td style="text-align:left;">0.216</td>
+      <td style="text-align:left;font-size:x-large;font-family:monospace;">TACTAATA</td>
+   </tr>
+    <tr>
+      <td style="text-align:left;">TACTAAYM</td>
+      <td style="text-align:left;">MEME-1</td>
+      <td style="text-align:left;">chrM</td>
+      <td style="text-align:center;">+</td>
+      <td style="text-align:left;">10959</td>
+      <td style="text-align:left;">10966</td>
+      <td style="text-align:left;">8.79e-05</td>
+      <td style="text-align:left;">0.261</td>
+      <td style="text-align:left;font-size:x-large;font-family:monospace;">TACTAACT</td>
+   </tr>
+</tbody>
 </table>
+
 <hr>
 <center><big><b><a name="debugging_information">DEBUGGING INFORMATION</a></b></big></center>
+<hr>
+<p>
+Command line:
+</p>
+<pre>
+fimo -o ./out/ /tmp/tmp49fkeyko/files/8/b/7/dataset_8b70cd4b-aab7-40e2-8536-6ff6083c9333.dat /tmp/tmp49fkeyko/files/e/a/0/dataset_ea07d34a-d880-4cef-9b3e-995563b73c43.dat
+</pre>
+<p>
+Settings:
+</p>
+<pre>
+<table>
+  <tr>
+    <td style="padding-right: 2em">output_directory = ./out/</td>
+    <td style="padding-left: 5em; padding-right: 2em">MEME file name = /tmp/tmp49fkeyko/files/8/b/7/dataset_8b70cd4b-aab7-40e2-8536-6ff6083c9333.dat</td>
+    <td style="padding-left: 5em; padding-right: 2em">sequence file name = /tmp/tmp49fkeyko/files/e/a/0/dataset_ea07d34a-d880-4cef-9b3e-995563b73c43.dat</td>
+  </tr>  <tr>
+    <td style="padding-right: 2em">background file name = --nrdb--</td>
+    <td style="padding-left: 5em; padding-right: 2em">alphabet = DNA</td>
+    <td style="padding-left: 5em; padding-right: 2em">max stored scores = 100000</td>
+  </tr>  <tr>
+    <td style="padding-right: 2em">allow clobber = false</td>
+    <td style="padding-left: 5em; padding-right: 2em">compute q-values = true</td>
+    <td style="padding-left: 5em; padding-right: 2em">parse genomic coord. = false</td>
+  </tr>
+  <tr>
+    <td style="padding-right: 2em">text only = false</td>
+    <td style="padding-left: 5em; padding-right: 2em">scan both strands = true</td>
+    <td style="padding-left: 5em; padding-right: 2em">max strand = false</td>
+  </tr>
+  <tr>
+    <td style="padding-right: 2em">threshold type = p-value</td>
+    <td style="padding-left: 5em; padding-right: 2em">output theshold = 0.0001</td>
+    <td style="padding-left: 5em; padding-right: 2em">pseudocount = 0.1</td>
+  </tr>
+  <tr>
+    <td style="padding-right: 2em">alpha = 1</td>
+    <td style="padding-left: 5em; padding-right: 2em">verbosity = 2</td>
+    <td style="padding-left: 5em; padding-right: 2em"></td>
+  </tr>
+
+</table>
+</pre>
+<p>
 This information can be useful in the event you wish to report a
 problem with the FIMO software.
+</p>
+<hr>
+<span style="background-color: #DDDDFF"><a href="#top_buttons"><b>Go to top</b></a></span>
 </body>
 </html>
